<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_text"
        android:fontFamily="@font/bitter_italic"
        android:textColor="@color/contact_text"
        android:layout_margin="10dp"
        android:textSize="18sp" />

    <SearchView
        android:id="@+id/search"
        style="@style/App_EditText_Search"
        android:hint="@string/search"
        android:fontFamily="@font/bitter_italic"
        android:layout_below="@+id/text"
        android:inputType="text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="match_parent"
        android:fontFamily="@font/bitter_italic"
        android:layout_height="match_parent"
        android:layout_above="@+id/list_name_area"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/search" />

    <LinearLayout
        android:id="@+id/list_name_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_transparent_gray"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/list_name"
            style="@style/App_EditText_Create"
            android:layout_weight="7"
            android:inputType="text"
            android:fontFamily="@font/bitter_italic"
            android:hint="@string/list_name" />


        <TextView
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/rounded_transparent_green"
            android:gravity="center"
            android:text="@string/update"
            android:fontFamily="@font/bitter_italic"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>